Adding time-cards, which show accumulated time. - Removing duplicate index.html.
Signed-off-by: Jadin Heaston <86203688+JadinHeaston@users.noreply.github.com>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,53 @@
             <h3 id="current-time"></h3>
             <button id="change-status" title="Changes status between being clocked in and clocked out.">Update Clock Status</button>
         </div>
+        <ul id="time-card-container">
+            <li id="comp-card">
+                <p>Compensation</p>
+                <div class="time-card-amount">
+                    N/A
+                </div>
+                <div class="time-card-earned">
+                    N/A
+                </div>
+            </li>
+            <li id="fh-card">
+                <p>Floating Holiday</p>
+                <div class="time-card-amount">
+                    N/A
+                </div>
+                <div class="time-card-earned">
+                    N/A
+                </div>
+            </li>
+            <li id="mili-card">
+                <p>Military</p>
+                <div class="time-card-amount">
+                    N/A
+                </div>
+                <div class="time-card-earned">
+                    N/A
+                </div>
+            </li>
+            <li id="sick-card" >
+                <p>Sick</p>
+                <div class="time-card-amount">
+                    N/A
+                </div>
+                <div class="time-card-earned">
+                    N/A
+                </div>
+            </li>
+            <li id="vaca-card">
+                <p>Vacation</p>
+                <div class="time-card-amount">
+                    N/A
+                </div>
+                <div class="time-card-earned">
+                    N/A
+                </div>
+            </li>
+        </ul>
         <div id="log-container">
             <h2 class="noTextSelect">Log</h2>
             <div id="log-content">
