--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,12 @@
 
         <!-- Main Menu Items -->
         <div id="main-menu" aria-hidden="true">
+            <form id="credential-submission-form">
+                <input id="username-input" type="text" />
+                <input id="password-input" type="password" />
+
+                <button type="submit">Submit</button>
+            </form>
             <ul>
                 <a href="/index.html">
                     <li>
