--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/animations.css">
-    <script src="/js/scripts.js"></script>
+    <script src="/js/scripts.js" type="text/javascript"></script>
 </head>
 
 <body>
